--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,22 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="css/styles.css">
     </head>
-    <body>
-        <p>Welcome to the chat App!</p>
-        <form id="message-form">
-            <input name="message" type=""text placeholder="Message"/>
-            <button>Send</button>
-        </form>
-        <ol id="messages"></ol>
+    <body class="chat">
+        <div class="chat__sidebar">
+            <h3>People</h3>
+            <div id="user"></div>
+        </div>
+        <div class="chat__main">
+            <ol id="messages" class="chat__messages"></ol>
+            <div class="chat__footer">
+                <form id="message-form">
+                    <input name="message" type=""text placeholder="Message"/>
+                    <button>Send</button>
+                </form>
+            </div>
+        </div>
         <script src="/socket.io/socket.io.js"></script>
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
         <script src="index.js"></script>
