--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,8 @@
         </div>
         <script src="/socket.io/socket.io.js"></script>
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+        <script src="js/libs/moment.min.js"></script>
+        <script src="js/libs/mustache.js"></script>
         <script src="index.js"></script>
     </body>
 </html>
