--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,17 @@
                 </form>
             </div>
         </div>
+        <script id="message-template" type="text/template">
+            <li class="message">
+                <div class="message__title">
+                    <h4>{{ from }}</h4>
+                    <span>{{ createAt }}</span>
+                </div>
+                <div class="message__body">
+                    <p>{{ text }}</p>
+                </div>
+            </li>
+        </script>
         <script src="/socket.io/socket.io.js"></script>
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
         <script src="js/libs/moment.min.js"></script>
