--- a/public/index.html
+++ b/public/index.html
@@ -1,38 +1,30 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <link rel="stylesheet" href="css/styles.css">
-    </head>
-    <body class="chat">
-        <div class="chat__sidebar">
-            <h3>People</h3>
-            <div id="user"></div>
-        </div>
-        <div class="chat__main">
-            <ol id="messages" class="chat__messages"></ol>
-            <div class="chat__footer">
-                <form id="message-form">
-                    <input name="message" type=""text placeholder="Message"/>
-                    <button>Send</button>
-                </form>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Join | ChatApp</title>
+    <link rel="stylesheet" href="css/styles.css">
+</head>
+<body class="centered-form">
+    <div class="centered-form__form">
+        <form action="/chat.html">
+            <div class="form-field">
+                <h3>Join a Chat</h3>
             </div>
-        </div>
-        <script id="message-template" type="text/template">
-            <li class="message">
-                <div class="message__title">
-                    <h4>{{ from }}</h4>
-                    <span>{{ createAt }}</span>
-                </div>
-                <div class="message__body">
-                    <p>{{ text }}</p>
-                </div>
-            </li>
-        </script>
-        <script src="/socket.io/socket.io.js"></script>
-        <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-        <script src="js/libs/moment.min.js"></script>
-        <script src="js/libs/mustache.js"></script>
-        <script src="index.js"></script>
-    </body>
+            <div class="form-field">
+                <label>Display name</label>
+                <input type="text" name="name" autofocus/>
+            </div>
+            <div class="form-field">
+                <label>Room name</label>
+                <input type="text" name="room"/>
+            </div>
+            <div class="form-field">
+                <button>Join</button>
+            </div>
+        </form>
+    </div>
+</body>
 </html>
