--- a/public/chat.html
+++ b/public/chat.html
@@ -33,6 +33,7 @@
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
         <script src="js/libs/moment.min.js"></script>
         <script src="js/libs/mustache.js"></script>
+        <script src="/js/libs/deparam.js"></script>
         <script src="chat.js"></script>
     </body>
 </html>
