--- a/public/chat.html
+++ b/public/chat.html
@@ -7,7 +7,7 @@
     <body class="chat">
         <div class="chat__sidebar">
             <h3>People</h3>
-            <div id="user"></div>
+            <div id="users"></div>
         </div>
         <div class="chat__main">
             <ol id="messages" class="chat__messages"></ol>
